WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
97128
[BlackBerry] After zooming into an input field, zoom out when focus is lost.
https://bugs.webkit.org/show_bug.cgi?id=97128
Summary
[BlackBerry] After zooming into an input field, zoom out when focus is lost.
Mike Fenton
Reported
2012-09-19 13:10:22 PDT
SSIA.
Attachments
Patch
(4.05 KB, patch)
2012-09-19 13:13 PDT
,
Mike Fenton
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Mike Fenton
Comment 1
2012-09-19 13:13:41 PDT
Created
attachment 164767
[details]
Patch
Rob Buis
Comment 2
2012-09-19 13:27:16 PDT
Comment on
attachment 164767
[details]
Patch LGTM.
WebKit Review Bot
Comment 3
2012-09-19 14:34:38 PDT
Comment on
attachment 164767
[details]
Patch Clearing flags on attachment: 164767 Committed
r129044
: <
http://trac.webkit.org/changeset/129044
>
WebKit Review Bot
Comment 4
2012-09-19 14:34:41 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug