[BlackBerry] After zooming into an input field, zoom out when focus is lost. https://bugs.webkit.org/show_bug.cgi?id=97128

Reviewed by Rob Buis.

When the page has automatically zoomed in for input
focus, unzoom it when input focus is lost or keyboard hidden.

Reviewed Internally by Gen Mak.

* WebKitSupport/InputHandler.cpp:
(BlackBerry::WebKit::InputHandler::InputHandler):
(BlackBerry::WebKit::InputHandler::ensureFocusTextElementVisible):
* WebKitSupport/InputHandler.h:
(InputHandler):


Canonical link: https://commits.webkit.org/115096@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@129044 268f45cc-cd09-0410-ab3c-d52691b4dbfc